# bit-base

./: .gitignore  README.md  pyproject.toml
bit/: __init__.py  config.py  logging.py
bit/cli/: __init__.py  market.py  model.py  server.py  system.py  typer_i18n.py
bit/engines/: __init__.py  base.py  llamacpp.py  sglang.py  vllm.py
bit/i18n/: __init__.py  en.py  translator.py  zh.py
bit/market/: __init__.py  search.py
bit/models/: downloader.py  registry.py  types.py
bit/server/: adapters.py  app.py  auth.py  daemon.py  manager.py  runner.py
