[project]
name = "bit"
version = "0.1.0"
description = "多引擎模型推理平台 CLI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.22.0",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.26.8",
    "uvicorn>=0.50.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
bit = "bit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
